_ci/deployment/frontend-04-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ericaskari-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - ericaskari.com
        - www.ericaskari.com
      secretName: production-ericaskari-wildcard-tls-secret
  rules:
    - host: www.ericaskari.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-ericaskari-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: service-ericaskari-backend
                port:
                  number: 80

    - host: ericaskari.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-ericaskari-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: service-ericaskari-backend
                port:
                  number: 80
